--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Empowering Women. Strengthening Communities. Transforming Lives.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body class="font-sans bg-ffuf-warm-1 text-gray-800">
   <app-root></app-root>
