--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <title>Francis & Felicia Umenyi Foundation</title>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Empowering Women. Strengthening Communities. Transforming Lives.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
 </head>
 <body class="font-sans bg-ffuf-warm-1 text-gray-800">
   <app-root></app-root>
